<resources>
    <string name="app_name">Shop</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_item">CreateItemActivity</string>
    <string name="txt_item_added">Item added</string>
    <string name="txt_add_cancel">Item adding cancelled</string>
    <string name="action_cancel">Cancel</string>
    <string name="txt_item_edited">Item edited!</string>
    <string name="txt_about">Use this app to keep track of shopping lists.</string>
    <string name="txt_help">Use the touch controls to work with the application.</string>
    <string name="action_hide">Hide</string>
    <string name="drawer_header">Shopping List App</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="clearall">Clear All Items</string>
    <string name="emptyBoth">Please enter the item and price.</string>
    <string name="emptyItem">Please enter the item name.</string>
    <string name="emptyPrice">Please enter an estimated price for the item.</string>
    <string name="delete">Delete</string>
    <string name="checkall">Check All</string>
    <string name="uncheckall">Uncheck All</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="additem">Add Item</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="price">Item Price</string>
    <string name="type">Item Type:</string>
    <string name="name">Item Name</string>
</resources>
